// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarButton #active 1`] = `
<button
  aria-label={null}
  className="toolbar-button toolbar-button--active"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;

exports[`ToolbarButton #icon 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <Icon
    className=""
    name="icon-test"
    title={null}
  />
</button>
`;

exports[`ToolbarButton #label 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Test label
</button>
`;

exports[`ToolbarButton #name 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name="TEST"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;

exports[`ToolbarButton empty 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;
